crates/plotnik-tests/tests/04-emit/types/captures/unrelated_same_name_unlabeled_conflict_keeps_capture_type_warning.txt
Q = [
  {
    {
      {
        (identifier) @id
      } @x :: text
    } @row
    (identifier) @x
  }
  {
    (identifier) @other
  } @x
]
------------------ DIAGNOSTICS -------------------
warning: capture type `text` replaces the record value captured by `@x` with source text
 --> query.ptk:6:9
  |
5 |         (identifier) @id
  |                      --- this captured value is suppressed by `@x :: text`
6 |       } @x :: text
  |         ^^^^^^^^^^
  |
help: remove `:: text` to return the record value instead

error: capture `@x` has incompatible types across alternatives
  --> query.ptk:8:18
   |
 8 |     (identifier) @x
   |                  ^^
...
12 |   } @x
   |     -- and a different type here
   |
help: make every alternative produce the same type, or label the alternatives for a variant type
